--- a/Pages/PPFindex.html
+++ b/Pages/PPFindex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="PPF Calculator - Simplify Your Public Provident Fund Calculations with Ashiana" content="Calculate your PPF returns effortlessly with Ashiana Housing's PPF Calculator. Plan your savings, track interest, and estimate maturity amounts for a secure financial future. Try it now!">
     <title>PPF Calculator</title>
     <link rel="stylesheet" href="../assets/style.css">
 </head>
@@ -66,90 +66,196 @@
                         </div>
                       </form>
                     </div>
-                    <div class="result-section">
-                      <h2 style="color: white;">Results</h2>
-                      <div class="calculated-result">
-                          <p id="result">Your result will appear here.</p>
-                      </div>
+
+                            <div class="result-section">
+                    <h2>Results</h2>
+                    <div class="calculated-result">
+                        <p id="result">Your result will appear here.</p>
                     </div>
+                </div>  
                 <section class="description-section">
-                  <h3>Description</h3>
-                  <p>
-                      The first step towards wealth management is accumulating savings. Public Provident Fund (PPF) accounts are a popular investment option for long-term savings and tax benefits. To simplify the calculations involved in PPF, a **PPF calculator** is a valuable tool.
-                  </p>
+                    <h3>Description</h3>
+                    <p>If you're looking to save for the future in a <strong>risk-free</strong> manner, a <strong>Public Provident Fund (PPF)</strong> account is a great option. The PPF offers guaranteed returns, making it an attractive investment for <strong>new employees</strong>, <strong>parents</strong> planning for their children's future, or anyone aiming to build savings over time. Calculating the returns on your PPF account can be tricky, but with the right tools, you can easily figure out how much you will earn. One such tool is the <strong>PPF calculator</strong>, which helps you compute interest and returns accurately.</p>
 
-                  <h3>How a PPF Calculator Can Help</h3>
-                  <p>
-                      A PPF calculator helps you:
-                  </p>
-                  <ul>
-                      <li><strong>Estimate Maturity Amount:**</li> 
-                      <li><strong>Track Investment Growth:**</li> 
-                      <li><strong>Assess the Impact of Interest Rate Changes:**</li> 
-                      <li><strong>Plan for Financial Goals:**</li> 
-                  </ul>
+                    <h3>What is a PPF Account?</h3>
+                    <p>A <strong>Public Provident Fund (PPF)</strong> account is a long-term savings scheme offered by the government of India that provides attractive interest rates and tax benefits. This government-backed savings option encourages individuals to invest for the future in a <strong>risk-free</strong> manner. PPF accounts are commonly offered by banks like <strong>SBI, HDFC, ICICI</strong>, and others, as well as post offices.</p>
 
-                  <h3>Formula Used for Calculating PPF</h3>
-                  <p>
-                      The formula used to calculate the maturity amount of a PPF account is:
-                  </p>
-                  <pre>
-                      F = P * (((1+i)^n - 1) / i)
-                  </pre>
-                  <p>
-                      Where:
-                  </p>
-                  <table>
+                    <h3>How Can the PPF Calculator Help You?</h3>
+                    <p>The <strong>PPF calculator</strong> simplifies the process of calculating the maturity amount and interest earned from your PPF account. With this financial tool, you can easily track how much your investment will grow over time, based on different interest rates. The PPF interest rate changes periodically, so using the <strong>PPF calculator</strong> can help you adjust your plans according to current market conditions.</p>
+                    <p>Here’s how the <strong>PPF calculator</strong> works: It takes into account factors like the annual contribution, tenure of investment, and applicable interest rates to calculate the maturity amount. You can also use the <strong>PPF interest calculator</strong> to check both monthly and yearly contributions.</p>
+
+                    <h3>PPF Interest Rate and Calculation Formula</h3>
+                    <p>The PPF interest rate varies each year, and currently, it is set at 7.1% (subject to change). The interest is compounded annually. The PPF calculator uses the following formula to calculate your returns:</p>
+                    <p><strong>F = P [({(1 + i) ^n} - 1) / i]</strong>
+                      
+                    </p>
+                    <p>Where:</p>
+                    <ul>
+                      <li><strong>F</strong> is the maturity amount.</li>
+                      <li><strong>P</strong> is the annual deposit amount.</li>
+                      <li><strong>i</strong> is the interest rate.</li>
+                      <li><strong>n</strong> is the number of years.</li>
+                    </ul>
+
+                    <h3>Example: How to Use the PPF Calculator</h3>
+                    <p>Let's assume an individual invests ₹1,50,000 annually in their PPF account for a tenure of 15 years at an interest rate of 7.1%. Using the PPF account calculator, the maturity sum after 15 years will be ₹40,68,209.</p>
+                    <p>The table below shows the growth of the investment:</p>
+
+                    <table border="1">
                       <thead>
-                          <tr>
-                              <th>Variable</th>
-                              <th>Description</th>
-                          </tr>
+                        <tr>
+                          <th>Year</th>
+                          <th>Opening Balance</th>
+                          <th>Annual Deposit</th>
+                          <th>Interest Earned</th>
+                          <th>Closing Balance</th>
+                          <th>Loan</th>
+                          <th>Amount Withdrawn</th>
+                        </tr>
                       </thead>
                       <tbody>
-                          <tr>
-                              <td>F</td>
-                              <td>Maturity amount</td>
-                          </tr>
-                          <tr>
-                              <td>P</td>
-                              <td>Annual investment</td>
-                          </tr>
-                          <tr>
-                              <td>i</td>
-                              <td>Interest rate per period</td>
-                          </tr>
-                          <tr>
-                              <td>n</td>
-                              <td>Number of periods</td>
-                          </tr>
+                        <tr>
+                          <td>1</td>
+                          <td>0</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.11400</td>
+                          <td>Rs.161400</td>
+                          <td>0</td>
+                          <td>0</td>
+                        </tr>
+                        <tr>
+                          <td>2</td>
+                          <td>Rs.161400</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.23666</td>
+                          <td>Rs.335066</td>
+                          <td>0</td>
+                          <td>0</td>
+                        </tr>
+                        <tr>
+                          <td>3</td>
+                          <td>Rs.335066</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.36865</td>
+                          <td>Rs.521931</td>
+                          <td>Rs.40350</td>
+                          <td>0</td>
+                        </tr>
+                        <tr>
+                          <td>4</td>
+                          <td>Rs.521931</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.51067</td>
+                          <td>Rs.722998</td>
+                          <td>Rs.83767</td>
+                          <td>0</td>
+                        </tr>
+                        <tr>
+                          <td>5</td>
+                          <td>Rs.722998</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.66348</td>
+                          <td>Rs.939346</td>
+                          <td>Rs.130483</td>
+                          <td>0</td>
+                        </tr>
+                        <tr>
+                          <td>6</td>
+                          <td>Rs.939346</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.82790</td>
+                          <td>Rs.1172136</td>
+                          <td>Rs.180750</td>
+                          <td>0</td>
+                        </tr>
+                        <tr>
+                          <td>7</td>
+                          <td>Rs.1172136</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.100482</td>
+                          <td>Rs.1422618</td>
+                          <td>0</td>
+                          <td>Rs.260966</td>
+                        </tr>
+                        <tr>
+                          <td>8</td>
+                          <td>Rs.1422618</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.119519</td>
+                          <td>Rs.1692137</td>
+                          <td>0</td>
+                          <td>Rs.361499</td>
+                        </tr>
+                        <tr>
+                          <td>9</td>
+                          <td>Rs.1692137</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.140002</td>
+                          <td>Rs.1982139</td>
+                          <td>0</td>
+                          <td>Rs.469673</td>
+                        </tr>
+                        <tr>
+                          <td>10</td>
+                          <td>Rs.1982139</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.162043</td>
+                          <td>Rs.2294182</td>
+                          <td>0</td>
+                          <td>Rs.586068</td>
+                        </tr>
+                        <tr>
+                          <td>11</td>
+                          <td>Rs.2294182</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.185758</td>
+                          <td>Rs.2629940</td>
+                          <td>0</td>
+                          <td>Rs.711309</td>
+                        </tr>
+                        <tr>
+                          <td>12</td>
+                          <td>Rs.2629940</td>
+                          <td>Rs.150000</td>
+                          <td>Rs.211275</td>
+                          <td>Rs.2991215</td>
+                          <td>0</td>
+                          <td>Rs.846069</td>
+                        </tr>
                       </tbody>
-                  </table>
+                    </table>
 
-                  <h3>How to Use a PPF Calculator</h3>
-                  <p>
-                      To use a PPF calculator, you typically need to provide the following information:
-                  </p>
-                  <ul>
-                      <li><strong>Annual Investment Amount:**</li> 
-                      <li><strong>Interest Rate:**</li> 
-                      <li><strong>Investment Tenure:**</li> 
-                  </ul>
-                  <p>
-                      The calculator will then use the formula to determine the estimated maturity amount.
-                  </p>
+                    <h3>How to Use the PPF Calculator?</h3>
+                    <p>Using the <strong>PPF calculator</strong> online is simple. Here's how you can calculate your returns:</p>
+                    <ul>
+                      <li><strong>Enter</strong> the annual deposit amount: This is the total sum you plan to invest in your PPF account every year.</li>
+                      <li><strong>Select</strong> the investment tenure: Specify the number of years you wish to keep your funds invested.</li>
+                      <li><strong>Input</strong> the current PPF interest rate: The rate changes annually, so ensure you use the latest rate for accurate calculations.</li>
+                      <li><strong>Get</strong> your maturity amount: The calculator will display the maturity amount you will receive at the end of the investment tenure.</li>
+                    </ul>
+                    <p>For those making monthly deposits, you can use the <strong>PPF calculator monthly</strong> to calculate the returns based on your monthly contribution.</p>
 
-                  <h3>Advantages of Using a PPF Calculator</h3>
-                  <p>
-                      Using a PPF calculator offers several benefits:
-                  </p>
-                  <ul>
-                      <li><strong>Accurate Calculations:**</strong> Ensures precise calculations and avoids errors.</li>
-                      <li><strong>Time-Saving:**</strong> Quickly calculates maturity amounts without manual computations.</li>
-                      <li><strong>Financial Planning:**</li> 
-                      <li><strong>Informed Decision-Making:**</li> 
-                  </ul>
-              </section>
+                    <h3>Advantages of Using the PPF Calculator</h3>
+                    <p>The <strong>PPF interest calculator</strong> offers several benefits:</p>
+                    <ul>
+                      <li><strong>Accurate Calculations</strong>: It provides precise calculations based on your inputs, helping you plan for the future.</li>
+                      <li><strong>Track Interest Changes</strong>: You can keep track of the interest rate changes and see how they impact your investment.</li>
+                      <li><strong>Investment Planning</strong>: The calculator helps you estimate the total amount invested and how much you will earn from interest.</li>
+                      <li><strong>Tax Benefits</strong>: PPF accounts offer tax exemptions under Section 80C, and using the <strong>PPF account calculator</strong> ensures you are optimizing your tax savings.</li>
+                    </ul>
+
+                    <h3>Key Terms Related to PPF:</h3>
+                    <ul>
+                      <li><strong>What is PPF Account</strong>: A government-backed long-term savings scheme offering tax benefits.</li>
+                      <li><strong>PPF Account Interest Rate</strong>: The interest rate at which your PPF investment grows.</li>
+                      <li><strong>PPF Return Calculator</strong>: A tool to estimate returns based on your contribution and the current interest rate.</li>
+                      <li><strong>PPF Scheme</strong>: The official program under which PPF accounts are managed by the government.</li>
+                      <li><strong>PPF Interest Rate 2024</strong>: The current interest rate applicable to PPF accounts for the year 2024.</li>
+                    </ul>
+
+                    <h3>Conclusion</h3>
+                    <p>With the help of Ashiana Housing's <strong>PPF calculator</strong>, you can easily calculate the returns on your Public Provident Fund investment, making it easier to plan for the future. Whether you're investing annually or monthly, this tool ensures accurate and reliable results. Start planning your future today with a PPF account, and watch your savings grow over time.</p>
+                  </section>
             </section>
 
            <aside class="right-section">
@@ -165,43 +271,44 @@
                   <a href="../Pages/HRAindex.html">PPF Calculator</a>
               </div>
           </aside>
+
     </main>
     <section class="faq-section">
             <h1 style="text-align: center;">Frequently Asked Questions</h1>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is a senior living home?</h3>
+                    <h3>Who can use a PPF calculator?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Senior Living Homes or retirement homes are independent homes for seniors who want to lead a dignified life after retirement. These homes are designed with age-specific amenities.</p>
+                    <p>Anyone planning to invest in a PPF account or already holding one can use the calculator to estimate their future savings and plan their investments.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>How is senior living different from an old age home?</h3>
+                    <h3>What is the minimum and maximum amount I can invest in PPF?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Senior living homes are designed for independent living, whereas old age homes are often institutional facilities providing basic care for the elderly.</p>
+                    <p>The minimum contribution is ₹500 per financial year, and the maximum is ₹1.5 lakh per financial year.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is the difference between a premium home and a senior living project?</h3>
+                    <h3>How much interest rate can I get on my PPF account?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Premium homes cater to luxury needs, while senior living projects focus on providing a safe and supportive environment with amenities for seniors.</p>
+                    <p>The interest rate is mainly determined by the Central Government periodically. At present, the interest rate is 7.1% per annum.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What kind of medical assistance is available in Ashiana Senior Living?</h3>
+                    <h3>When is my investment going to mature?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Ashiana Senior Living provides on-call medical assistance, tie-ups with nearby hospitals, and 24/7 emergency services.</p>
+                    <p>In PPF accounts, maturity can be attained after 15 years. After this period, you are liable to withdraw the entire amount.</p>
                 </div>
             </div>
     </section>
@@ -228,6 +335,7 @@
     <footer>
         <p>Footer Content</p>
     </footer>
+
     <script src="../assets/PPFscript.js"></script>
 </body>
 </html>
