--- a/Pages/cagrIndex.html
+++ b/Pages/cagrIndex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="CAGR Calculator: Simplify Your Financial Planning with Ashiana Housing" content="Use Ashiana Housing's CAGR Calculator to evaluate investment growth, compare options, and plan smarter financial decisions. Accurate, user-friendly, and secure—ideal for real estate investors and homebuyers. Calculate CAGR effortlessly today!">
     <title>CAGR Calculator</title>
     <link rel="stylesheet" href="../assets/style.css">
 </head>
@@ -13,7 +13,6 @@
                <a href="../index.html"> <!-- Replace 'index.html' with your homepage URL -->
                 <img src="../assets/img/Ashiana Corporate Logo.pdf.png" alt="LOGO">
             </a>
-        </div>
         </div>
     </header>
 
@@ -47,89 +46,72 @@
                         <p id="result" ></p>
                     </div>
                 </div>
-             <section class="description-section">
+              <section class="description-section">
                 <h3>Description</h3>
                 <p>
-                    CAGR, or Compound Annual Growth Rate, is a crucial metric for assessing business performance and investment returns. It measures the average annual growth rate of an investment over a specific period, considering the impact of compounding.
+                    The <strong>CAGR (Compound Annual Growth Rate)</strong> is an essential tool for assessing the growth of your investments or business over time. For homeowners, real estate investors, and businesses alike, understanding your financial growth rate helps you make informed decisions. Ashiana Housing's online<strong> CAGR Calculator </strong>is here to make the process simple, accurate, and user-friendly.
                 </p>
+                <h3>What is CAGR?</h3>
                 <p>
-                    While there are numerous online CAGR calculators, choosing a user-friendly and accurate tool like Ashiana Housing's calculator can significantly simplify the process.
+                    CAGR represents the average annual growth rate of an investment over a specified period, assuming consistent reinvestment of returns. Unlike absolute returns, CAGR accounts for the time factor, offering a better understanding of your financial progress.
                 </p>
-
-                <h3>How Can a CAGR Calculator Help You?</h3>
-                <p>
-                    A CAGR calculator offers several benefits:
-                </p>
-                <ul>
-                    <li><strong>Evaluate Business Performance:**</strong> It helps assess your business's growth trajectory and identify areas for improvement.</li>
-                    <li><strong>Compare Investment Options:**</strong> By calculating the CAGR of different investments, you can make informed decisions about where to allocate your funds.</li>
-                    <li><strong>Measure Relative Performance:**</strong> Compare your business's growth to industry benchmarks or competitors.</li>
-                </ul>
-
+                <h3>Benefits of Ashiana Housing’s CAGR Calculator</h3>
+                <p>Using our CAGR Calculator allows you to:</p>
+                <ol>
+                    <li><strong>Evaluate Investment Growth:</strong> Measure the growth of your real estate investments over time.</li>
+                    <li><strong>Compare Investment Options:</strong>Determine which property or financial option offers better returns.</li>
+                    <li><strong>Track Business Growth:</strong>Analyze how your profits are being reinvested and the overall growth of your ventures.</li>
+                    <li><strong>Plan Future Investments:</strong>Develop a roadmap for long-term capital planning based on accurate insights.</li>
+                </ol>
                 <h3>How to Calculate CAGR?</h3>
-                <p>
-                    The CAGR formula is:
-                </p>
-                <p><strong>= (FV / PV)^(1/n) - 1</strong>     </p>
-                <p>
-                    Where:
-                </p>
+                <p>The CAGR formula is:</p>
+                <p><strong>CAGR = (FV / PV) ^ (1 / n) – 1</strong></p>
+                <p>Where:</p>
                 <table>
-                    <thead>
-                        <tr>
-                            <th>Term</th>
-                            <th>Definition</th>
-                        </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>FV</td>
+                            <td><strong>FV:</strong></td>
                             <td>Future Value</td>
                         </tr>
                         <tr>
-                            <td>PV</td>
+                            <td><strong>PV:</strong></td>
                             <td>Present Value</td>
                         </tr>
                         <tr>
-                            <td>n</td>
-                            <td>Number of years</td>
+                            <td><strong>n:</strong></td>
+                            <td>Time Period in Years</td>
                         </tr>
                     </tbody>
                 </table>
-
-                <h3>Example of CAGR Calculation</h3>
-                <p>
-                    Let's say you invested ₹1 lakh (PV) and it grew to ₹10 lakh (FV) over 5 years (n). The CAGR would be:
-                </p>
-                <p>
-                    <strong>= (10,00,000 / 1,00,000)^(1/5) - 1</strong> 
-                </p>
-                <p>
-                    This calculates to a CAGR of approximately 58.9%.
-                </p>
-
-                <h3>Using an Online CAGR Calculator</h3>
-                <p>
-                    To use a CAGR calculator like Ashiana Housing's:
-                </p>
+                <p>For example:</p>
+                <p>If you invested ₹1,00,000 (PV) and its value grew to ₹10,00,000 (FV) in 5 years (n), the CAGR would be:</p>
+                <p><strong>CAGR = (10,00,000 / 1,00,000) ^ (1 / 5) – 1 = 0.589 or 58.9% annually.</strong></p>
+                <h3>How to Use Ashiana Housing’s Online CAGR Calculator</h3>
+                <p>Using our calculator is simple and free:</p>
                 <ol>
-                    <li>Enter the initial investment amount (PV).</li>
-                    <li>Input the final value of the investment (FV).</li>
-                    <li>Specify the number of years (n).
+                    <li>Enter the initial investment amount (Present Value).</li>
+                    <li>Input the expected future value of the investment (Future Value).</li>
+                    <li>Specify the time period for which you want to calculate CAGR.</li>
                 </ol>
-                <p>
-                    The calculator will quickly compute the CAGR.
-                </p>
-
-                <h3>Benefits of Using an Online CAGR Calculator</h3>
+                <p>Our calculator will instantly provide the CAGR percentage, saving you time and effort.</p>
+                <h3>Why Choose Ashiana Housing’s CAGR Calculator?</h3>
                 <ul>
-                    <li><strong>Accurate Calculations:</strong> Ensures precise CAGR calculations, saving time and effort.</li>
-                    <li><strong>Easy to Use:</strong> User-friendly interface simplifies the process.</li>
-                    <li><strong>Quick Results:</strong> Instantaneous calculations provide timely insights.</li>
-                    <li><strong>Informed Decision-Making:</strong> Helps you make informed financial decisions based on data-driven analysis.</li>
+                    <li><strong>Accurate Results:</strong>  Get precise insights into your investment growth.</li>
+                    <li><strong>User-Friendly Interface:</strong>Effortlessly calculate CAGR with just a few inputs.</li>
+                    <li><strong>Free & Secure:</strong>Use the tool without any cost or data security concerns.</li>
+                    <li><strong>Plan Smarter Investments:</strong>Compare multiple options to maximize returns.</li>
+                    <li><strong>Real Estate Expertise:</strong>Specifically designed for real estate investors and homebuyers.</li>
                 </ul>
+                <h3>Plan Your Financial Growth with Ashiana Housing</h3>
+                <p>Our CAGR Calculator is part of a suite of financial tools designed to help you make smarter, data-driven investment decisions. Whether you’re planning to buy your dream home or grow your investment portfolio, Ashiana Housing empowers you to take control of your finances.</p>
+                <p>Explore our calculators today and step confidently toward your financial goals!</p>
+                <h3>Conclusion</h3>
+                <p>Ashiana Housing’s online CAGR Calculator is an essential tool for homeowners, real estate investors, and businesses aiming to understand and enhance their financial growth. By providing accurate, user-friendly insights into your investment’s growth rate, it empowers you to make informed decisions, plan for the future, and maximize returns. Whether you’re assessing the growth of your real estate investments or comparing different financial options, our tool helps simplify the process, ensuring you are always on track toward your financial goals. Take control of your financial future with Ashiana Housing today!</p>
             </section>
-        </section>
+
+
+            </section>
 
             <!-- Right Section -->
             <aside class="right-section">
@@ -152,41 +134,32 @@
             <h1 style="text-align: center;">Frequently Asked Questions</h1>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is CAGR?</h3>
+                    <h3>What is CAGR return?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>CAGR (Compound Annual Growth Rate) represents the annual growth rate of an investment, assuming it grows at a consistent rate over the specified period.</p>
+                    <p>CAGR (Compound Annual Growth Rate) is a financial metric used to measure the average annual growth rate of an investment over a specified time period, assuming the profits are reinvested at the end of each period. It provides a smoothed rate of return, eliminating the effects of market volatility, and is widely used to compare the performance of investments.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>How is CAGR different from absolute return?</h3>
+                    <h3>Does CAGR reflect investment risks?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Absolute return only shows the total growth, while CAGR accounts for the time value of money, reflecting yearly returns.</p>
+                    <p>No, CAGR (Compound Annual Growth Rate) does not reflect investment risks. While CAGR provides a clear and simplified measure of average annual growth over a specified period, it does not account for the fluctuations, volatility, or uncertainty that occurred during that time. This limitation makes it essential to consider other metrics and factors alongside CAGR when evaluating an investment.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is the formula for CAGR?</h3>
+                    <h3>Is calculating CAGR a better idea than working on IRR?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>CAGR = [(Ending Value / Beginning Value) ^ (1 / Number of Years)] - 1.</p>
+                    <p>While CAGR (Compound Annual Growth Rate) and IRR (Internal Rate of Return) both measure investment performance, CAGR can often be a more reliable indicator of overall financial health and stability under specific circumstances.</p>
                 </div>
             </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>Why is CAGR important?</h3>
-                    <span class="faq-toggle">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>CAGR helps investors compare investment performance over time and against benchmarks, providing a clearer growth perspective.</p>
-                </div>
-            </div>
-    </section>
+</section>
     <section class="blogs">
         <h2>Blogs</h2>
         <div class="blog-carousel">
