--- a/Pages/gratuityIndex.html
+++ b/Pages/gratuityIndex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Gratuity Calculator- Calculate Your Gratuity Easily with Ashiana Housing" content="Calculate your gratuity amount instantly with Ashiana Housing's Gratuity Calculator. Simplify gratuity calculations for private employees, understand eligibility, and plan for a secure financial future. Try it now!">
     <title>Gratuity Calculator</title>
     <link rel="stylesheet" href="../assets/style.css">
 </head>
@@ -13,7 +13,6 @@
                <a href="../AHL CALCI/index.html"> <!-- Replace 'index.html' with your homepage URL -->
                 <img src="../assets/img/Ashiana Corporate Logo.pdf.png" alt="LOGO">
             </a>
-        </div>
         </div>
     </header>
 
@@ -36,111 +35,101 @@
                     </div>
                     </form>
                 </div>
-                <div class="result-section">
+
+                    <div class="result-section">
                         <h2>Results</h2>
                         <div class="calculated-result">
                             <p id="result">Your result will appear here.</p>
                         </div>
-                </div>
-                <section class="description-section">
-                        <h3>Description</h3>
-                        <p>
-                            Employees of private companies that offer EPF benefits are eligible for gratuity after completing 5 years of service. However, certain conditions, like disability due to an accident or illness, may allow for earlier eligibility. 
-                        </p>
-                        <p>
-                            To calculate your potential gratuity amount, you can use a free online gratuity calculator like the one provided by Ashiana Housing. This tool helps you determine the amount you may be entitled to, based on your last drawn salary and years of service. 
-                        </p>
+                    </div>
 
+                    <section class="description-section">
+                        <h3>Description</h3>
+                        <p>If you're an employee of a private company in India, you're eligible to receive gratuity under the Payment of Gratuity Act 1972 after completing five years of service. However, in certain circumstances such as injury or disability due to an accident or disease, you may be eligible for gratuity even before five years. The gratuity amount is calculated based on your last drawn salary, including basic salary and Dearness Allowance (DA), and the number of years you have worked in the company.</p>
+                        <h3>How to Use the Gratuity Calculator by Ashiana Housing</h3>
+                        <p>To help you calculate your gratuity amount, Ashiana Housing offers a free gratuity calculator. This tool is essential for employees who wish to determine how much gratuity they are eligible for. By simply entering your last drawn salary and the number of years you have worked, you can quickly find out the gratuity amount you are entitled to.</p>
                         <h3>Gratuity Calculation Formula</h3>
-                        <p>
-                            The formula used to calculate gratuity is:
-                        </p>
-                        <pre>
-                            G = n * b * 15 / 26
-                        </pre>
-                        <p>
-                            Where:
-                        </p>
+                        <p>The gratuity calculation formula used by Ashiana Housing’s online tool is:</p>
+                        <p><strong>G = n × b × 15 / 26</strong></p>
+                        <p>Where:</p>
                         <table>
-                            <thead>
-                                <tr>
-                                    <th>Variable</th>
-                                    <th>Description</th>
-                                </tr>
-                            </thead>
                             <tbody>
                                 <tr>
-                                    <td>N/n</td>
+                                    <td><strong>n</strong></td>
+                                    <td>=</td>
                                     <td>Number of years of service</td>
                                 </tr>
                                 <tr>
-                                    <td>B/b</td>
+                                    <td><strong>b</strong></td>
+                                    <td>=</td>
                                     <td>Last drawn basic salary + Dearness Allowance (DA)</td>
                                 </tr>
                                 <tr>
-                                    <td>G</td>
+                                    <td><strong>15</strong></td>
+                                    <td>=</td>
+                                    <td>Constant factor</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>26</strong></td>
+                                    <td>=</td>
+                                    <td>Total working days in a month</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>G</strong></td>
+                                    <td>=</td>
                                     <td>Gratuity amount</td>
                                 </tr>
                             </tbody>
                         </table>
-
-                        <h3>Example of Gratuity Calculation</h3>
-                        <p>
-                            For instance, if you've worked for 5 years with a last drawn salary + DA of ₹30,000 per month, your eligible gratuity would be:
-                        </p>
-                        <pre>
-                            5 * 30,000 * 15 / 26 = ₹86,538.46
-                        </pre>
-
-                        Note:
+                        <p>For instance, if you’ve worked for 5 years with a monthly salary (including DA) of Rs. 30,000, the gratuity amount would be:</p>
+                        <p><strong>G = 5 × 30,000 × 15 / 26 = Rs. 86,538.46</strong></p>
+                        <h3>Key Factors of Gratuity</h3>
                         <ul>
-                            <li>The maximum gratuity exempt from tax is ₹20 lakh.</li>
-                            <li>Years of service are rounded to the nearest whole number.</li>
+                            <li>Your gratuity cannot exceed Rs. 10 lakh, with any amount above this considered <strong>ex gratia.</strong></li>
+                            <li>For work periods beyond 5 years, fractions like 17 years and 6 months will be rounded off to 18 years.</li>
                         </ul>
 
-                        <h3>How Can a Gratuity Calculator Help You?</h3>
-                        <p>
-                            A gratuity calculator is helpful if you:
-                            <ul>
-                                <li>Are nearing retirement age.</li>
-                                <li>Have completed 5 or more years of continuous service.</li>
-                                <li>Do not have any other full-time employment.</li>
-                            </ul>
-                        </p>
-                        <p>
-                            The benefits of using a gratuity calculator include:
-                            <ul>
-                                <li><strong>Accurate calculations</strong></li>
-                                <li><strong>Time-saving</strong></li>
-                                <strong>Easy to use</strong>
-                                <li><strong>Financial planning</strong></li>
-                            </ul>
+                        <h3>How the Gratuity Calculator Helps You</h3>
+                        <p>The <strong>gratuity calculator</strong> is a great tool because it:</p>
+                        <ul>
+                            <li><strong></strong> Saves time by providing instant calculations.</li>
+                            <li><strong>Helps with long-term financial planning</strong> by providing clarity on the amount you’ll receive.</li>
+                            <li>Is available <strong>online</strong>, so you can access it from anywhere in India, including cities like <strong>Bangalore, Pune,</strong> and <strong>Mumbai.</strong></li>
+                        </ul>
 
-                        <h3>How to Use a Gratuity Calculator</h3>
-                        <p>
-                            To use a gratuity calculator:
-                            <ol>
-                                <li>Gather information about your employment history.</li>
-                                <li>Enter your last drawn salary + DA.</li>
-                                <li>The calculator will display your estimated gratuity amount.</li>
-                            </ol>
+                        <h3>Advantages of the Gratuity Calculator by Ashiana Housing</h3>
+                        <ul>
+                            <li><strong>Easy to use:</strong>No technical expertise needed.</li>
+                            <li><strong>Secure: </strong>Our servers ensure your data is safe.</li>
+                            <li><strong>Accurate: </strong>You can trust our <strong>gratuity calculator for private employees</strong> to provide precise results.</li>
+                        </ul>
 
-                        <h3>Taxation Rules for Gratuity</h3>
-                        <p>
-                            Gratuity taxation depends on your employment type:
-                            <ul>
-                                <li><strong>Government employees:</strong> Gratuity is generally tax-exempt.</li>
-                                <li><strong>Private sector employees:</strong> The lesser of the following is tax-exempt:
-                                    <ul>
-                                        <li>₹20 lakh</li>
-                                        <li>Actual gratuity received</li>
-                                        <li>Eligible gratuity calculated using the formula</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </p>
+                        <h3>Eligibility for Gratuity</h3>
+                        <p>To be eligible for gratuity, you must meet the following criteria under the <strong>Payment of Gratuity Act 1972:</strong></p>
+                        <ul>
+                            <li>You should have <strong>completed at least 5 years</strong> of service with your employer.</li>
+                            <li>You are eligible for gratuity if you're near the <strong>age of superannuation</strong>, have <strong>worked continuously</strong>, and have no other full-time employer.</li>
+                        </ul>
+                        <p>If you meet these criteria, use our <strong>free online calculator</strong> to determine how much gratuity you are entitled to.</p>
+
+                        <h3><strong>Gratuity Taxation</strong></h3>
+                        <p>The taxation on gratuity depends on the type of employee:</p>
+                        <ul>
+                            <li><strong>Government employees: </strong> Gratuity is exempt from tax.</li>
+                            <li><strong>Private-sector employees: </strong> The tax-exempt gratuity amount depends on several factors, with a lifetime limit of <strong></strong>Rs. 20 lakh.</li>
+                        </ul>
+
+                        <h3>How to Use the Gratuity Calculator</h3>
+                        <ol>
+                            <li>Gather essential details about your employment, such as your <strong>last drawn salary</strong> and <strong>years of service.</strong></li>
+                            <li>Enter the data into the <strong>gratuity calculator online</strong> to instantly calculate your gratuity.</li>
+                        </ol>
+                        <h3>Conclusion</h3>
+                        Ashiana Housing’s Gratuity Calculator is an invaluable tool for private-sector employees looking to understand and calculate their gratuity entitlement. By simplifying the process, this user-friendly calculator helps you determine the gratuity amount based on your years of service and last drawn salary. With its accurate and instant results, the calculator assists in effective financial planning, giving you clarity on your future benefits. Whether you are nearing retirement or assessing your eligibility for gratuity, Ashiana Housing ensures that you have the right tools to secure your financial future with ease.</p>
+                    </section>
                 </section>
-            </section>
+           
+
             <!-- Right Section -->
             <aside class="right-section">
                 <div class="image-banner">
@@ -148,8 +137,8 @@
                 </div>
                 <div class="cta-links">
                     <a href="../index.html">Calculator Page</a> 
-                    <a href="../Pages/cagrIndex.html">CAGR Calculator</a>
-                    <a href="../Pages/emiIndex.html">EMI Calculator</a>
+                    <a href="../Pages/cagrIndex.html">EMI Calculator</a>
+                    <a href="../Pages/emiIndex.html">Gratuity Calculator</a>
                     <a href="../Pages/homeEMIindex.html">Home Loan EMI Calculator</a>
                     <a href="../Pages/HRAindex.html">HRA Calculator</a>
                     <a href="../Pages/PPFindex.html">PPF Calculator</a>
@@ -157,15 +146,16 @@
             </aside>
         </div>
     </main>
+
     <section class="faq-section">
             <h1 style="text-align: center;">Frequently Asked Questions</h1>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is gratuity?</h3>
+                    <h3>What is gratuity calculator?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Gratuity is a monetary benefit given by an employer to an employee for services rendered during the period of employment.</p>
+                    <p>A gratuity calculator is an online tool designed to estimate the gratuity amount an employee is entitled to receive from their employer upon leaving a job after completing at least five years of continuous service.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -174,25 +164,19 @@
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Employees who have completed at least five years of continuous service with the same employer are eligible for gratuity.</p>
+                    <p>Any employee who has completed at least five continuous years of service in a company can use the calculator to estimate their gratuity amount.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>How is gratuity calculated?</h3>
+                    <h3>How does a gratuity calculator work?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Gratuity is calculated as: (Monthly Salary × 15 × Years of Service) ÷ 26.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <h3>Is gratuity taxable?</h3>
-                    <span class="faq-toggle">+</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Gratuity is tax-exempt up to a certain limit as per the Income Tax Act. Any amount exceeding this limit is taxable.</p>
+                    <p>It uses the following formula for gratuity under the Payment of Gratuity Act, 1972: (Last Drawn Salary × 15 × Years of Service) ÷ 26.<br>
+                        Here: Last Drawn Salary includes basic pay and dearness allowance (DA).
+                        Tenure of Service is the total number of years worked (rounded down).
+                    </p>
                 </div>
             </div>
     </section>
