--- a/Pages/HRAindex.html
+++ b/Pages/HRAindex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="HRA Calculator – Calculate Your House Rent Allowance Tax Exemption" content="Save on taxes with Ashiana Housing’s HRA calculator. Calculate your HRA tax exemption based on salary, rent paid, and city of residence. Try our easy-to-use calculator now!">
     <title>HRA Calculator</title>
     <link rel="stylesheet" href="../assets/style.css">
 </head>
@@ -13,7 +13,6 @@
                <a href="../AHL CALCI/index.html"> <!-- Replace 'index.html' with your homepage URL -->
                 <img src="../assets/img/Ashiana Corporate Logo.pdf.png" alt="LOGO">
             </a>
-            </div>
         </div>
     </header>
     <h1 style="text-align: center;">HRA Calculator</h1>
@@ -63,64 +62,106 @@
                         <p id="resultTAXABLE">Taxable HRA: ₹0.00</p>
                     </div>
                 </div>
-                
-
                 <section class="description-section">
                     <h3>Description</h3>
-                    <p>
-                        House Rent Allowance (HRA) is a significant component of many salary packages. It's designed to compensate employees for housing expenses. While HRA can be a valuable benefit, it's important to understand how to maximize its tax benefits. 
-                    </p>
-                    <p>
-                        An HRA calculator is a useful tool to determine the tax-exempt portion of your HRA. By accurately calculating your HRA exemption, you can significantly reduce your taxable income.
-                    </p>
+                    <p><strong>House Rent Allowance (HRA)</strong> is a key component of your salary, helping you manage rental expenses. However, did you know that you can also save on taxes with the right <strong>HRA tax exemptions</strong>? The HRA amount varies based on your salary structure, the actual rent paid, and the city you live in. For salaried employees living in rented homes, calculating HRA and its associated tax exemptions is crucial. Our <strong>HRA calculator</strong> is designed to help you determine the tax exemptions you can claim.</p>
 
-                    <h3>How an HRA Calculator Works</h3>
-                    <p>
-                        To calculate HRA exemption, an HRA calculator considers the following factors:
-                    </p>
+                    <h3>What is an HRA Calculator?</h3>
+                    <p>As the cost of living in many Indian cities continues to rise, many organizations provide <strong>House Rent Allowance (HRA)</strong> as part of their employees' salaries. The <strong>HRA calculator</strong> can help you determine the amount of HRA you are eligible for based on your salary, the rent you pay, and the city you live in.</p>
+                    <p>The HRA slabs in India have been categorized into three distinct groups after the 7th Pay Commission recommendations:</p>
                     <ul>
-                        <li><strong>Basic Salary:</strong> The fundamental salary component.</li>
-                        <li><strong>Actual Rent Paid:</strong> The actual rent you pay for your rented accommodation.</li>
-                        <li><strong>HRA Received:</strong> The HRA component of your salary.</li>
-                        <li><strong>City Type:</strong> Whether you reside in a metro city (like Delhi, Mumbai, Chennai, Kolkata) or a non-metro city.</li>
+                        <li><strong>Slab X:</strong> Most urban cities where the cost of living is high.</li>
+                        <li><strong>Slab Y:</strong> Marginally lower-cost cities.</li>
+                        <li><strong>Slab Z:</strong> Smaller cities with relatively lower living costs.</li>
                     </ul>
 
-                    <p>
-                        The HRA exemption is calculated based on the minimum of the following three amounts:
-                    </p>
+                    <h3>How Can the HRA Calculator Help You?</h3>
+                    <p>The <strong>HRA exemption calculator</strong> is a useful tool for salaried employees who receive HRA as part of their salary. It helps calculate the tax-exempt portion of the HRA based on various factors. To claim HRA exemptions, the following conditions must be met:</p>
                     <ul>
-                        <li><strong>Actual Rent Paid - 10% of Basic Salary</strong></li>
-                        <li><strong>HRA Received</strong></li>
-                        <li><strong>50% of Basic Salary for Metro Cities, 40% for Non-Metro Cities</strong></li>
+                        <li><strong>Salaried Status:</strong> You must be a salaried individual receiving HRA.</li>
+                        <li><strong>Rent Paid:</strong> You should be living in a rented accommodation.</li>
+                        <li><strong>Exceeds 10% of Salary:</strong> The HRA must exceed 10% of your basic salary.</li>
+                    </ul>
+                    <p>Using our <strong>HRA tax exemption calculator</strong>, you can determine how much tax you need to pay and how much of your HRA can be claimed as an exemption.</p>
+
+                    <h3>How to Calculate HRA in India?</h3>
+                    <p>Groww’s <strong>HRA calculation tool</strong> follows a standard formula to determine the House Rent Allowance payable. The salary components considered for the calculation include Basic Salary, Dearness Allowance, and other variable commissions. The HRA tax exemption is calculated based on the lowest of the following three heads:</p>
+                    <ul>
+                        <li>Actual Rent Paid – 10% of Basic Salary</li>
+                        <li>HRA Provided by Employer</li>
+                        <li>40%-50% of Basic Salary, depending on the city.</li>
                     </ul>
 
-                    <h3>How to Use an HRA Calculator</h3>
-                    <p>
-                        To use an HRA calculator, you typically need to provide the following information:
-                    </p>
+                    <h3>Example of HRA Calculation</h3>
+                    <p>Let’s take a fictional example of Person A, who lives in Delhi and pays ₹12,000 in rent every month. Here’s his salary breakdown:</p>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Salary component</th>
+                            <th>Total amount (each month)</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Basic Salary</td>
+                            <td>₹23,000</td>
+                        </tr>
+                        <tr>
+                            <td>HRA</td>
+                            <td>₹15,000</td>
+                        </tr>
+                        <tr>
+                            <td>Conveyance Allowance</td>
+                            <td>₹3,000</td>
+                        </tr>
+                        <tr>
+                            <td>Medical Allowance</td>
+                            <td>₹1,250</td>
+                        </tr>
+                        <tr>
+                            <td>Special Allowance</td>
+                            <td>₹2,300</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                    <p>Adding the components, we identify that Individual A has a monthly salary of ₹44,500.</p>
+                    <p>Now, using the <strong>HRA exemption calculator</strong>, the figures are calculated as follows:</p>
                     <ul>
-                        <li>Your basic salary</li>
-                        <li>The HRA component of your salary</li>
-                        <li>The actual rent paid</li>
-                        <li>The city type (metro or non-metro)</li>
+                        <li>Actual Rent Paid – 10% of Basic: ₹12,000 – ₹2,300 = ₹9,700</li>
+                        <li>HRA Provided by Employer: ₹15,000</li>
+                        <li>50% of Basic Salary: ₹11,500</li>
+                    </ul>
+                    <p>The lowest amount among these three is ₹9,700, so Person A can claim ₹9,700 as HRA exemption from his taxable income.</p>
+
+                    <h3>How to Use the HRA Calculator?</h3>
+                    <p>To use our <strong>HRA tax exemption calculator</strong>:</p>
+                    <ol>
+                        <li>Enter your basic salary and the HRA you receive as per your salary slip.</li>
+                        <li>Enter the actual rent paid and specify whether you live in a metro city or not using the drop-down menu.</li>
+                    </ol>
+                    <p>This simple tool will instantly calculate your HRA tax exemptions, making it easier to save on taxes.</p>
+
+                    <h3>Benefits of Using the HRA Calculator</h3>
+                    <p>The <strong>HRA calculator</strong> provides several advantages:</p>
+                    <ul>
+                        <li><strong>Error-Free Calculations:</strong> The calculator accurately computes your HRA and its exemptions, avoiding any manual errors.</li>
+                        <li><strong>Tax Savings:</strong> By calculating HRA exemptions, you can reduce your taxable income, thereby saving on taxes.</li>
+                        <li><strong>Multiple Uses:</strong> You can use the HRA exemption calculator as many times as needed to evaluate different scenarios.</li>
+                        <li><strong>Quick and Easy:</strong> The calculator simplifies the process of understanding your HRA and ensures you comply with the income tax regulations.</li>
                     </ul>
 
-                    <p>
-                        The calculator will then determine the maximum tax-exempt HRA amount based on the above factors.
-                    </p>
-
-                    <h3>Benefits of Using an HRA Calculator</h3>
-                    <p>
-                        An HRA calculator offers several advantages:
-                    </p>
+                    <h3>Key HRA Calculation Terms</h3>
                     <ul>
-                        <li><strong>Accurate Calculations:**</strong> Ensures precise calculations and avoids errors.</li>
-                        <li><strong>Time-Saving:**</strong> Quickly calculates your HRA exemption without manual computations.</li>
-                        <li><strong>Tax Planning:**</strong> Helps you understand your tax liability and plan accordingly.</li>
-                        <li><strong>Easy to Use:**</strong> User-friendly interface simplifies the process.</li>
+                        <li><strong>HRA Tax Exemption:</strong> The amount of HRA that can be claimed as exempt from income tax under Section 10(13A).</li>
+                        <li><strong>HRA Formula:</strong> The standard formula used for calculating HRA based on various components.</li>
+                        <li><strong>HRA Percentage:</strong> The percentage of Basic Salary allocated as HRA by the employer.</li>
+                        <li><strong>HRA Deduction:</strong> The deduction of HRA from your taxable income based on the applicable exemptions.</li>
                     </ul>
+
+                    <h3>Conclusion</h3>
+                    <p>Whether you live in a metro city or a smaller town, understanding the HRA tax exemption rules can significantly reduce your taxable income. By using Ashiana Housing’s <strong>HRA calculator</strong>, you can easily calculate the HRA exemption you are entitled to, plan your finances better, and save on taxes. Start using our <strong>HRA calculator</strong> online today and ensure you maximize your house rent tax exemptions.</p>
                 </section>
-
             </section>
 
             <!-- Right Section -->
@@ -146,38 +187,44 @@
             <h1 style="text-align: center;">Frequently Asked Questions</h1>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is a senior living home?</h3>
+                    <h3>How much of the HRA I earn is tax-exempt?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Senior Living Homes or retirement homes are independent homes for seniors who want to lead a dignified life after retirement. These homes are designed with age-specific amenities.</p>
+                    <p>The following slabs apply in this instance.
+                        <ul>
+                            <li>50% of basic salary for big metros.</li>
+                            <li>40% of basic salary for non-metro locales.</li>
+                        </ul>
+                        Ordinarily, the gross HRA the employer pays is non-taxable.
+                    </p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>How is senior living different from an old age home?</h3>
+                    <h3>Which documents prove I have paid my rent?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Senior living homes are designed for independent living, whereas old age homes are often institutional facilities providing basic care for the elderly.</p>
+                    <p>Receipts of the rent paid during the last financial year are applicable. If you do not have the receipts, you will have to show financial statements proving you have paid rent.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What is the difference between a premium home and a senior living project?</h3>
+                    <h3>Who is eligible to use the HRA Calculator?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Premium homes cater to luxury needs, while senior living projects focus on providing a safe and supportive environment with amenities for seniors.</p>
+                    <p>Salaried employees receiving HRA as part of their salary structure and paying rent are eligible to use the HRA Calculator.</p>
                 </div>
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    <h3>What kind of medical assistance is available in Ashiana Senior Living?</h3>
+                    <h3>Can self-employed individuals claim HRA?</h3>
                     <span class="faq-toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>Ashiana Senior Living provides on-call medical assistance, tie-ups with nearby hospitals, and 24/7 emergency services.</p>
+                    <p>No, HRA is a benefit exclusively for salaried employees. However, self-employed individuals can claim rent deductions under Section 80GG of the Income Tax Act.</p>
                 </div>
             </div>
     </section>
