--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Ashiana Housing- Financial Planning Calculators" content="Take control of your home-buying journey with Ashiana Housing's Financial Planning Calculators. Easily calculate EMI, loan eligibility, stamp duty, and more to plan your finances effortlessly!">
     <title>Calculator Page</title>
     <link rel="stylesheet" href="assets\styles.css">
     <script defer src="assets/script.js"></script>
